feat(project-management): initialize Task Master AI and create comprehensive PRD
- Initialize Task Master AI project structure with v0.17.1
- Create comprehensive Product Requirements Document (PRD) based on extensive research
- Generate 18 prioritized tasks with dependencies for V1 completion
- Structure includes 6 critical V1 blockers and portfolio enhancement features
- Research-backed requirements incorporating latest 2025 best practices

Features:
- V1 critical blockers: test infrastructure, configuration consolidation, service layer simplification
- Portfolio enhancements: RAG integration, analytics dashboard, vector visualization
- Configuration UX revolution: auto-detection, profiles, interactive setup wizard
- Future roadmap: multi-collection architecture, advanced analytics, enterprise features

Task breakdown:
- Phase 1 (V1 Blockers): 17-24 days
- Phase 2 (Portfolio Features): 7-10 days
- Phase 3 (Configuration UX): 10-14 days
- Total estimated timeline: 34-48 days

--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,25 @@ benchmarks/results/
 ehthumbs.db
 Thumbs.db
 desktop.ini
+
+# Task Master AI - API Keys and Sensitive Config
+.cursor/mcp.json*
+.codeium/windsurf/mcp_config.json*
+
+# Task Master AI - Debug and Temporary Files
+*.debug
+init-debug.log
+dev-debug.log
+.taskmaster/temp/
+.taskmaster/.cache/
+
+# Task Master AI - Legacy Structure (pre-v0.16.0)
+.taskmasterconfig
+/scripts/prd.txt
+/scripts/task-complexity-report.json
+
+# Cursor/AI Tools (may contain sensitive data)
+.cursor/
+.roo/
+.roomodes
+.windsurfrules
