chore: clean up temporary documentation files and optimize dependency comments
- Remove temporary analysis reports and roadmap files
- Streamline dependency comments while keeping compatibility notes
- Maintain essential compatibility explanations for complex dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,13 +32,13 @@ classifiers = [
 
 dependencies = [
     # Core web framework & API
-    "fastapi>=0.115.12,<0.116.0", # Latest stable release 2025
+    "fastapi>=0.115.12,<0.116.0",
     "starlette>=0.41.0,<0.42.0", # Compatible with FastAPI 0.115.12
-    "uvicorn[standard]>=0.34.2,<0.35.0",  # Latest available stable release 2025
+    "uvicorn[standard]>=0.34.2,<0.35.0",
     "python-multipart>=0.0.12,<0.1.0", # For FastAPI file uploads
     
     # Data validation & configuration
-    "pydantic>=2.11.5,<3.0.0", # Latest stable release 2025, browser-use 0.2.6 compatibility
+    "pydantic>=2.11.5,<3.0.0", # browser-use 0.2.6 compatibility
     "pydantic-settings>=2.8.0,<3.0.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
@@ -108,22 +108,22 @@ dev = [
 # Browser automation (optional heavy dependencies)
 browser = [
     "playwright>=1.52.0,<2.0.0", # Python 3.13 compatible
-    "browser-use>=0.2.6,<0.3.0", # Partial Python 3.13 support
+    "browser-use>=0.2.6,<0.3.0", # Python 3.13 compatibility
 ]
 
 # LangChain integrations (optional AI features)  
 llm = [
-    "langchain-openai>=0.3.11,<1.0.0", # Relaxed constraint per research
-    "langchain-anthropic>=0.3.0,<1.0.0", # Updated for consistency
-    "langchain-google-genai>=2.0.0,<3.0.0", # Updated to 2.x series
+    "langchain-openai>=0.3.11,<1.0.0",
+    "langchain-anthropic>=0.3.0,<1.0.0",
+    "langchain-google-genai>=2.0.0,<3.0.0",
 ]
 
 # Observability and tracing (optional monitoring features)
 observability = [
-    "opentelemetry-api>=1.34.1,<2.0.0", # Latest stable release June 2025
-    "opentelemetry-sdk>=1.34.1,<2.0.0", # Latest stable release June 2025
-    "opentelemetry-instrumentation-fastapi>=0.54b0,<1.0.0", # Latest beta
-    "opentelemetry-exporter-prometheus>=0.54b1,<1.0.0", # Latest beta
+    "opentelemetry-api>=1.34.1,<2.0.0",
+    "opentelemetry-sdk>=1.34.1,<2.0.0",
+    "opentelemetry-instrumentation-fastapi>=0.54b0,<1.0.0",
+    "opentelemetry-exporter-prometheus>=0.54b1,<1.0.0",
     "opentelemetry-instrumentation-starlette>=0.54b0,<1.0.0", # For Starlette instrumentation
 ]
 
