--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 # Install with: pip install -r requirements.txt
 
 # Core web framework & API
-fastapi>=0.115.12,<0.116.0  # Latest stable release 2025
+fastapi>=0.115.12,<0.116.0
 starlette>=0.41.0,<0.42.0  # Compatible with FastAPI 0.115.12
-uvicorn[standard]>=0.34.2,<0.35.0  # Latest available stable release 2025
+uvicorn[standard]>=0.34.2,<0.35.0
 python-multipart>=0.0.12,<0.1.0
 
 # Data validation & configuration
-pydantic>=2.11.5,<3.0.0  # Latest stable release 2025
+pydantic>=2.11.5,<3.0.0
 pydantic-settings>=2.8.0,<3.0.0
 python-dotenv>=1.1.0,<2.0.0
 pyyaml>=6.0.2,<7.0.0
@@ -23,13 +23,13 @@ openai>=1.82.1,<2.0.0
 fastembed>=0.6.1,<0.7.0
 FlagEmbedding>=1.3.5,<2.0.0
 
-# Data processing & ML (Python 3.13 compatible)
+# Data processing & ML
 pandas>=2.2.3,<3.0.0
-numpy>=1.24.0,<2.0.0  # Compatible with browser-use and Python 3.12
+numpy>=1.24.0,<2.0.0  # Compatible with browser-use
 scipy>=1.15.3,<2.0.0
 defusedxml>=0.7.1,<0.8.0
 
-# HTTP & async (optimized for performance)
+# HTTP & async
 aiohttp>=3.12.4,<4.0.0
 asyncio-throttle>=1.0.2,<2.0.0
 aiofiles>=24.1.0,<25.0.0
@@ -61,16 +61,16 @@ sqlalchemy>=2.0.0,<3.0.0
 tomli-w>=1.0.0,<2.0.0
 jsonschema2md>=1.5.2,<2.0.0
 
-# Browser automation (optional heavy dependencies)
+# Browser automation
 playwright>=1.52.0,<2.0.0
 browser-use>=0.2.6,<0.3.0
 
-# LangChain integrations (optional AI features)
+# LangChain integrations
 langchain-openai>=0.3.11,<1.0.0
 langchain-anthropic>=0.3.0,<1.0.0
 langchain-google-genai>=2.0.0,<3.0.0
 
-# Code parsing tools (optional development features)
+# Code parsing tools
 tree-sitter>=0.24.0,<0.25.0
 tree-sitter-python>=0.23.6,<0.24.0
 tree-sitter-javascript>=0.23.1,<0.24.0
