chore: add .taskmaster/reports/ to gitignore and remove from tracking
- Add .taskmaster/reports/ directory to gitignore
- Remove existing report files from git tracking
- These are generated files that should not be committed

--- a/.gitignore
+++ b/.gitignore
@@ -198,6 +198,7 @@ init-debug.log
 dev-debug.log
 .taskmaster/temp/
 .taskmaster/.cache/
+.taskmaster/reports/
 
 # Task Master AI - Legacy Structure (pre-v0.16.0)
 .taskmasterconfig
