feat(gitignore): optimize task-master-ai file tracking
- Add .taskmaster/state.json to gitignore (auto-managed file)
- Untrack .taskmaster/state.json from repository
- Maintain tracking of .env.example and .env.test (templates/mocks)
- Ensure all task-master-ai sensitive files are properly ignored

Completes task-master-ai gitignore optimization based on official repository patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -199,6 +199,7 @@ dev-debug.log
 .taskmaster/temp/
 .taskmaster/.cache/
 .taskmaster/reports/
+.taskmaster/state.json
 
 # Task Master AI - Legacy Structure (pre-v0.16.0)
 .taskmasterconfig
