--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,6 +91,9 @@ dev = [
     "pytest-cov>=6.1.1,<7.0.0",
     "pytest-mock>=3.14.1,<4.0.0",
     "pytest-timeout>=2.3.1,<3.0.0",
+    "pytest-xdist>=3.5.0,<4.0.0", # Parallel test execution
+    "hypothesis>=6.133.0,<7.0.0",  # Property-based testing
+    "mutmut>=2.5.1,<3.0.0",       # Mutation testing
     "fakeredis>=2.29.0,<3.0.0",
     "ruff>=0.11.12,<0.12.0",
     "black>=25.1.0,<26.0.0",
@@ -245,6 +248,7 @@ markers = [
     "performance: marks tests as performance tests",
     "asyncio: marks tests as async tests",
     "benchmark: marks tests as benchmark tests",
+    "hypothesis: marks tests as property-based tests using Hypothesis",
 ]
 
 # Logging configuration for tests
@@ -300,4 +304,7 @@ dev = [
     "coverage>=7.6.0",
     "ruff>=0.11.13",
     "pytest-benchmark>=5.1.0",
+    "hypothesis>=6.135.14",
+    "pytest-xdist>=3.7.0",
+    "mutmut>=2.5.1",
 ]
