fix(gitignore): add mutation testing cache to ignored files
Remove .mutmut-cache from version control and add to .gitignore:
- Cache files are machine-specific and should not be committed
- Allows mutmut to maintain performance optimizations locally
- Prevents unnecessary repository bloat from generated artifacts
- Cache will be automatically regenerated when mutation testing runs

Follows standard practice for excluding build artifacts and cache files
from version control while preserving developer workflow optimization.

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,9 @@ benchmark_results/
 .benchmark/
 benchmarks/results/
 
+# Mutation testing cache
+.mutmut-cache
+
 # Backup files
 *.bak
 *.backup
