--- a/mutmut_config.ini
+++ b/mutmut_config.ini
@@ -4,8 +4,8 @@
 # Source paths to mutate (focus on critical, high-coverage files)
 paths_to_mutate = src/config/
 
-# Test runner - use uv with pytest
-runner = uv run pytest -x tests/examples/test_modern_patterns.py tests/unit/config/ -q
+# Test runner - use uv with pytest focused on unit tests
+runner = uv run pytest -x tests/unit/core/test_constants.py tests/unit/config/ -m "unit and fast" -q
 
 # Exclude patterns
 exclude_patterns = __pycache__, *.pyc, migrations/
@@ -16,8 +16,8 @@ cache_dir = .mutmut-cache
 # Backup original files
 backup = True
 
-# Use multiprocessing for faster runs
-processes = 4
+# Use multiprocessing for faster runs (not supported in current mutmut version)
+# processes = 4
 
 # Only run mutations on lines that are covered by tests
 only_covered_lines = True
