chore: optimize pytest configuration for 2025 testing
- Update pytest.ini with modern markers and async support
- Add pytest-optimized.ini for fast test execution
- Configure test discovery patterns and output formatting
- Add comprehensive test markers for categorization
- Enable asyncio mode and proper timeout settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -27,6 +27,14 @@ markers =
     unit: marks tests as unit tests
     integration: marks tests as integration tests
     performance: marks tests as performance/benchmark tests
+    e2e: marks tests as end-to-end tests
+    contract: marks tests as contract tests
+    consumer_driven: marks tests as consumer-driven contract tests
+    deployment: marks tests related to deployment
+    mcp: marks tests related to Model Context Protocol
+    browser_monitoring: marks tests for browser automation monitoring
+    database_pooling: marks tests for database connection pooling
+    environment: marks tests related to environment configuration
     
     # Environment categories
     browser: marks tests requiring browser automation
