build: update project dependencies and test configuration
- Update pyproject.toml with modern dependency specifications
- Optimize pytest.ini for 2025 test infrastructure standards
- Sync requirements-dev.txt with latest testing tools

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,16 @@
 [pytest]
-# Test Infrastructure Modernization - Optimized Configuration
+# Test Infrastructure Modernization - Optimized Configuration for 2025
 
-# Core collection settings
+# Core collection settings with performance optimizations
 testpaths = tests
-python_files = test_*.py
+python_files = test_*.py *_test.py
 python_functions = test_*
 python_classes = Test* *Test *Tests
 
-# Output formatting for fast feedback
+# Collection optimization
+norecursedirs = .git .tox dist build *.egg .venv __pycache__ .mypy_cache .pytest_cache .ruff_cache
+
+# Output formatting for fast feedback with modern optimizations
 addopts = 
     --tb=short
     --strict-markers
@@ -16,6 +19,10 @@ addopts =
     -ra
     --maxfail=10
     --durations=10
+    --strict-config
+    --showlocals
+    -p no:hypothesispytest
+    --import-mode=importlib
 
 # Marker definitions for test categorization
 markers =
@@ -61,8 +68,10 @@ markers =
     asyncio: marks async tests
     benchmark: marks benchmark tests
 
-# Timeout settings (can be overridden by platform-specific configs)
+# Timeout settings with method-specific overrides
 timeout = 120
+timeout_method = thread
+timeout_func_only = true
 
 # Parallel execution
 # Note: -n auto will be added by test runner scripts for parallel execution
@@ -77,10 +86,21 @@ log_cli_level = WARNING
 log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)d)
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Warnings filter
+# Warnings filter with performance considerations
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
     ignore::UserWarning:.*playwright.*
     ignore::UserWarning:.*fastembed.*
     ignore::ResourceWarning
+    ignore::pytest.PytestUnraisableExceptionWarning
+    error::pytest.PytestUnhandledThreadExceptionWarning
+    
+# Doctests configuration
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS
+
+# Test discovery optimization
+consider_namespace_packages = true
+
+# Console output settings
+console_output_style = progress
