--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<3.13"
 authors = [{ name = "BjornMelin", email = "your-email@example.com" }]
+# Add dynamic version support for future releases
+# dynamic = ["version"]
 keywords = [
     "ai",
     "vector-database",
@@ -173,6 +175,8 @@ all = [
 Homepage = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
 Repository = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
 Issues = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/issues"
+Documentation = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/tree/main/docs"
+Changelog = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/blob/main/CHANGELOG.md"
 
 [project.scripts]
 ai-docs = "src.cli.main:main"
@@ -194,6 +198,11 @@ packages = ["src"]
 [tool.uv]
 managed = true
 package = true
+# UV performance optimizations
+compile-bytecode = true
+link-mode = "copy"  # Better for Docker builds
+upgrade-package = ["pip", "setuptools", "wheel"]  # Keep core tools updated
+resolution = "highest"  # Prefer latest compatible versions
 
 # ===== Simplified Ruff Configuration =====
 [tool.ruff]
@@ -201,9 +210,14 @@ line-length = 88
 target-version = "py312"
 src = ["src", "tests", "examples"]
 exclude = ["scripts"]
+# Performance optimization
+fix = true  # Auto-fix issues
+show-fixes = true  # Show what was fixed
+cache-dir = ".ruff_cache"  # Enable caching
+respect-gitignore = true  # Skip ignored files
 
 [tool.ruff.lint]
-# Basic but comprehensive rule selection
+# Comprehensive rule selection for 2025 best practices
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -215,21 +229,26 @@ select = [
     "SIM", # flake8-simplify
     "RUF", # Ruff-specific rules
     "PL",  # pylint (basic subset)
+    "S",   # flake8-bandit (security)
+    "DTZ", # flake8-datetimez
+    "PTH", # flake8-use-pathlib
+    "PERF",# Perflint (performance)
+    "ASYNC",# flake8-async
+    "ARG", # flake8-unused-arguments
+    "TRY", # tryceratops
 ]
 
 ignore = [
-    "D100",
-    "D101",
-    "D102",
-    "D103",
-    "D104",
-    "D105",    # Missing docstrings
+    "D100", "D101", "D102", "D103", "D104", "D105",  # Missing docstrings
     "PLR0911", # Too many return statements
     "PLR0912", # Too many branches
     "PLR0913", # Too many arguments
     "PLR0915", # Too many statements
     "PLR2004", # Magic value used in comparison
     "E501",    # Line too long (handled by formatter)
+    "S101",    # Use of assert (needed for tests)
+    "TRY003",  # Avoid long messages in exceptions
+    "PERF203", # try-except in loop (sometimes necessary)
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -238,21 +257,48 @@ ignore = [
 
 [tool.ruff.lint.isort]
 force-single-line = true
+combine-as-imports = true
+order-by-type = true
+known-first-party = ["src", "tests"]
+section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
 
 # ===== Black Configuration =====
 [tool.black]
 line-length = 88
-target-version = ['py313']
+target-version = ['py311', 'py312']
+# Modern formatting options
+skip-string-normalization = false
+include = '\.pyi?$'
+extend-exclude = '''
+^/(
+  (
+      \.eggs
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+)
+'''
 
 # ===== Pytest Configuration =====
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 testpaths = ["tests"]
-python_files = ["test_*.py"]
+python_files = ["test_*.py", "*_test.py"]
 python_functions = ["test_*"]
+python_classes = ["Test*", "*Tests", "*Test"]
+# Performance optimizations
+considerfailures = true  # Re-run failed tests first
+tb_native = true  # Use Python's native traceback
 
-# Clean output formatting
+# Clean output formatting with performance optimizations
 addopts = [
     "--tb=short",         # Shorter traceback format
     "--strict-markers",   # Treat unknown markers as errors
@@ -260,6 +306,11 @@ addopts = [
     "--no-header",        # Remove pytest header
     "-ra",                # Show short test summary for all except passed
     "--maxfail=5",        # Stop after 5 failures
+    "--strict-config",    # Error on unknown config keys
+    "--import-mode=importlib",  # Modern import mode
+    "--showlocals",       # Show local variables in tracebacks
+    "--doctest-modules",  # Run doctests in modules
+    "--doctest-continue-on-failure",  # Continue after doctest failures
 ]
 
 # Test discovery
@@ -342,6 +393,9 @@ addopts_parallel = [
 [tool.coverage.run]
 source = ["src"]
 branch = true
+parallel = true  # Enable parallel coverage collection
+context = "${CONTEXT}"  # Add context to coverage data
+concurrency = ["thread", "multiprocessing", "greenlet"]
 omit = [
     "*/tests/*",
     "*/test_*",
@@ -349,13 +403,18 @@ omit = [
     "*/migrations/*",
     "*/venv/*",
     "*/.venv/*",
+    "*/site-packages/*",
+    "*/distutils/*",
 ]
+relative_files = true  # Store relative paths for portability
 
 [tool.coverage.report]
 show_missing = true
 skip_covered = false
 fail_under = 38.0
 precision = 2
+sort = "Cover"  # Sort by coverage percentage
+skip_empty = true  # Skip files with no executable code
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
@@ -391,3 +450,157 @@ dev = [
     "locust>=2.37.10",
     "pyjwt>=2.10.1",
 ]
+
+# ===== Mypy Type Checking Configuration =====
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false  # Start permissive
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = false
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+ignore_missing_imports = true
+pretty = true
+show_error_context = true
+show_error_codes = true
+show_column_numbers = true
+# Performance optimizations
+cache_dir = ".mypy_cache"
+incremental = true
+follow_imports = "skip"
+follow_imports_for_stubs = true
+
+# Per-module overrides
+[[tool.mypy.overrides]]
+module = [
+    "tests.*",
+    "docs.*",
+    "scripts.*",
+]
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = [
+    "crawl4ai.*",
+    "firecrawl.*",
+    "qdrant_client.*",
+    "fastembed.*",
+]
+ignore_missing_imports = true
+
+# ===== Bandit Security Configuration =====
+[tool.bandit]
+skips = ["B101", "B601", "B602"]  # Skip assert_used, shell usage
+exclude_dirs = ["/tests/", "/scripts/"]
+tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306"]
+
+# ===== isort Configuration (if not using ruff) =====
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["src"]
+known_third_party = ["fastapi", "pydantic", "pytest"]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+# ===== Hatch Configuration =====
+[tool.hatch.version]
+# source = "vcs"  # Use git tags for versioning
+fallback-version = "0.1.0"
+
+# [tool.hatch.build.hooks.vcs]
+# version-file = "src/_version.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build]
+# Performance: exclude unnecessary files from builds
+exclude = [
+    "/.github",
+    "/docs",
+    "/tests",
+    "/scripts",
+    "/.vscode",
+    "/.idea",
+    "*.pyc",
+    "__pycache__",
+    ".coverage*",
+    ".pytest_cache",
+    ".mypy_cache",
+    ".ruff_cache",
+    "*.egg-info",
+]
+
+# ===== UV-specific workspace configuration =====
+# [tool.uv.workspace]
+# members = ["src/*"]  # If using workspace structure
+
+# ===== Performance and optimization settings =====
+[tool.performance]
+# Custom performance settings for the project
+embedding_batch_size = 100
+crawl_concurrency = 10
+vector_db_connections = 20
+cache_ttl = 3600
+max_memory_mb = 1000
+
+# ===== Project-specific tool configurations =====
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = true
+ignore-magic = false
+ignore-semiprivate = false
+ignore-private = false
+ignore-property-decorators = false
+ignore-module = false
+ignore-nested-functions = false
+ignore-nested-classes = true
+ignore-setters = false
+fail-under = 80
+exclude = ["setup.py", "docs", "build", "tests"]
+verbose = 0
+quiet = false
+whitelist-regex = []
+color = true
+omit-covered-files = false
+
+# ===== Task runner configuration =====
+[tool.taskipy.tasks]
+# Define common development tasks
+lint = "ruff check . --fix && ruff format ."
+test = "pytest tests/ -v"
+test-fast = "pytest tests/unit -m 'not slow' -v"
+test-cov = "pytest --cov=src --cov-report=html --cov-report=term-missing"
+type-check = "mypy src/"
+security = "bandit -r src/"
+deps-check = "uv pip compile pyproject.toml --universal --upgrade"
+clean = "find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"
+serve = "uvicorn src.api.main:app --reload"
+docs = "mkdocs serve"
+benchmark = "python scripts/benchmark_query_api.py"
+
+# ===== Versioning and release configuration =====
+[tool.commitizen]
+version = "0.1.0"
+tag_format = "v$version"
+version_files = [
+    "pyproject.toml:version",
+    "src/__init__.py:__version__",
+]
+
+# ===== Python bytecode optimization =====
+[tool.py-compile]
+optimize = 2  # -OO level optimization
+source = "src/"
+exclude = ["tests/", "scripts/"]
