--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,28 +1,22 @@
 # AI Docs Vector DB Hybrid Scraper - Development Dependencies
-# Install with: pip install -r requirements-dev.txt
-# For uv users: use 'uv sync --dev' instead
+# ============================================================
+# This file references development dependencies from pyproject.toml
+# 
+# Recommended installation method (using uv):
+#   uv sync --dev
+#
+# Alternative installation:
+#   uv pip install -e ".[dev,contract,accessibility,docs]"
+#
+# Legacy pip installation:
+#   pip install -e ".[dev,contract,accessibility,docs]"
+#
+# Note: All dependencies are now centrally managed in pyproject.toml
+# This file exists for compatibility with tools that expect requirements-dev.txt
 
-# Core dependencies (includes browser automation + LLM integrations)
--r requirements.txt
+# Install project with all development extras
+-e .[dev,contract,accessibility,docs,observability,parsing]
 
-# Development and testing tools
-pytest>=8.5.0,<9.0.0
-pytest-asyncio>=2.0.0,<3.0.0
-pytest-cov>=6.2.0,<7.0.0
-pytest-mock>=3.15.0,<4.0.0
-fakeredis>=3.0.0,<4.0.0
-coverage>=8.0.0,<9.0.0
-
-# Code quality and formatting
-ruff>=0.12.0,<0.13.0
-black>=25.1.0,<26.0.0
-
-# Additional test utilities
-iniconfig>=2.1.0,<3.0.0
-pluggy>=1.6.0,<2.0.0
-pytest-timeout>=2.4.0,<3.0.0  # Test timeouts
-pytest-benchmark>=5.0.0,<6.0.0  # Performance testing
-
-# Optional observability tools for development
-opentelemetry-distro>=0.55b0,<1.0.0  # OpenTelemetry testing
-opentelemetry-exporter-otlp>=1.33.0,<2.0.0  # OTLP export testing
+# For CI/CD environments that need explicit dependencies:
+# Uncomment the line below to generate a locked requirements file:
+# uv pip compile pyproject.toml --extra dev --extra contract --extra accessibility -o requirements-dev-locked.txt
