--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,11 @@ classifiers = [
 dependencies = [
     # Core web framework & API
     "fastapi>=0.115.12,<0.116.0",
-    "starlette>=0.41.0,<0.42.0", # Compatible with FastAPI 0.115.12
+    "starlette>=0.41.0,<0.42.0",         # Compatible with FastAPI 0.115.12
     "uvicorn[standard]>=0.34.2,<0.35.0",
-    "python-multipart>=0.0.12,<0.1.0", # For FastAPI file uploads
+    "python-multipart>=0.0.12,<0.1.0",   # For FastAPI file uploads
     # Data validation & configuration
-    "pydantic>=2.11.5,<3.0.0", # browser-use 0.2.6 compatibility
+    "pydantic>=2.11.5,<3.0.0",         # browser-use 0.2.6 compatibility
     "pydantic-settings>=2.8.0,<3.0.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
@@ -49,15 +49,15 @@ dependencies = [
     # Vector database & embeddings
     "qdrant-client[fastembed]>=1.14.2,<2.0.0",
     "openai>=1.82.1,<2.0.0",
-    "fastembed>=0.6.1,<0.7.0", # Keep constraint - Python 3.13 incompatible in 0.7+
+    "fastembed>=0.6.1,<0.7.0",                 # Keep constraint - Python 3.13 incompatible in 0.7+
     "FlagEmbedding>=1.3.5,<2.0.0",
     # Data processing & ML (Python 3.13 compatible)
     "pandas>=2.2.3,<3.0.0",
-    "numpy>=1.24.0,<2.0.0", # Compatible with browser-use and Python 3.12
-    "scipy>=1.15.3,<2.0.0", # Python 3.13 support from 1.13+
+    "numpy>=1.24.0,<2.0.0",     # Compatible with browser-use and Python 3.12
+    "scipy>=1.15.3,<2.0.0",     # Python 3.13 support from 1.13+
     "defusedxml>=0.7.1,<0.8.0", # Secure XML parsing
     # HTTP & async (optimized for performance)
-    "aiohttp>=3.12.4,<4.0.0", # Kept for superior async performance
+    "aiohttp>=3.12.4,<4.0.0",         # Kept for superior async performance
     "asyncio-throttle>=1.0.2,<2.0.0",
     "aiofiles>=24.1.0,<25.0.0",
     # Circuit breaker & retry patterns
@@ -77,7 +77,7 @@ dependencies = [
     # Monitoring & observability
     "prometheus-client>=0.21.1,<0.22.0",
     "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
-    "psutil>=7.0.0,<8.0.0", # Updated for browser-use 0.2.6+ compatibility
+    "psutil>=7.0.0,<8.0.0",                            # Updated for browser-use 0.2.6+ compatibility
     # Database & ORM
     "sqlalchemy>=2.0.0,<3.0.0",
     # Utility libraries
@@ -95,9 +95,9 @@ dev = [
     "pytest-cov>=6.1.1,<7.0.0",
     "pytest-mock>=3.14.1,<4.0.0",
     "pytest-timeout>=2.3.1,<3.0.0",
-    "pytest-xdist>=3.5.0,<4.0.0", # Parallel test execution
-    "hypothesis>=6.133.0,<7.0.0",  # Property-based testing
-    "mutmut>=2.5.1,<3.0.0",       # Mutation testing
+    "pytest-xdist>=3.5.0,<4.0.0",   # Parallel test execution
+    "hypothesis>=6.133.0,<7.0.0",   # Property-based testing
+    "mutmut>=2.5.1,<3.0.0",         # Mutation testing
     "fakeredis>=2.29.0,<3.0.0",
     "ruff>=0.11.12,<0.12.0",
     "black>=25.1.0,<26.0.0",
@@ -105,23 +105,23 @@ dev = [
 
 # Contract testing tools
 contract = [
-    "schemathesis>=3.21.0,<4.1.0",        # OpenAPI property-based testing
+    "schemathesis>=3.21.0,<4.1.0",          # OpenAPI property-based testing
     "openapi-spec-validator>=0.7.0,<0.9.0", # OpenAPI spec validation
-    "jsonschema>=4.23.0,<5.0.0",         # JSON schema validation
+    "jsonschema>=4.23.0,<5.0.0",            # JSON schema validation
     # "pact-python>=2.3.1,<3.0.0",         # Pact consumer-driven contracts - temporarily disabled due to psutil conflict
-    "responses>=0.25.0,<0.26.0",          # HTTP request mocking
-    "httpx>=0.28.1,<0.29.0",              # HTTP client for testing
-    "factory-boy>=3.3.1,<4.0.0",         # Test data generation
-    "faker>=36.1.0,<37.0.0",              # Fake data generation
+    "responses>=0.25.0,<0.26.0", # HTTP request mocking
+    "httpx>=0.28.1,<0.29.0",     # HTTP client for testing
+    "factory-boy>=3.3.1,<4.0.0", # Test data generation
+    "faker>=36.1.0,<37.0.0",     # Fake data generation
 ]
 
 # Accessibility testing tools
 accessibility = [
-    "axe-core-python>=0.1.0,<1.0.0",  # Python bindings for axe-core (using available version)
-    "selenium>=4.25.0,<5.0.0",        # For browser automation
-    "playwright>=1.52.0,<2.0.0",      # Alternative browser automation
-    "beautifulsoup4>=4.12.3,<5.0.0",  # HTML parsing for static analysis
-    "lxml>=5.3.0,<6.0.0",             # XML/HTML parser
+    "axe-core-python>=0.1.0,<1.0.0", # Python bindings for axe-core (using available version)
+    "selenium>=4.25.0,<5.0.0",       # For browser automation
+    "playwright>=1.52.0,<2.0.0",     # Alternative browser automation
+    "beautifulsoup4>=4.12.3,<5.0.0", # HTML parsing for static analysis
+    "lxml>=5.3.0,<6.0.0",            # XML/HTML parser
 ]
 
 # Browser automation (optional heavy dependencies)
@@ -157,7 +157,7 @@ parsing = [
 # Documentation tools (moved from docs/requirements.txt)
 docs = [
     "mkdocs>=1.6.0,<2.0.0",
-    "mkdocs-material>=9.5.0,<10.0.0", 
+    "mkdocs-material>=9.5.0,<10.0.0",
     "mkdocstrings>=0.24.0,<1.0.0",
     "mkdocstrings-python>=1.8.0,<2.0.0",
     "pdoc3>=0.11.6,<1.0.0",
@@ -185,11 +185,7 @@ mcp-server = "src.unified_mcp_server:main"
 task-worker = "src.cli_worker:main"
 
 [build-system]
-requires = [
-    "hatchling>=1.18.0",
-    "setuptools>=68.0.0",
-    "wheel>=0.40.0"
-]
+requires = ["hatchling>=1.18.0", "setuptools>=68.0.0", "wheel>=0.40.0"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -200,9 +196,9 @@ managed = true
 package = true
 # UV performance optimizations
 compile-bytecode = true
-link-mode = "copy"  # Better for Docker builds
-upgrade-package = ["pip", "setuptools", "wheel"]  # Keep core tools updated
-resolution = "highest"  # Prefer latest compatible versions
+link-mode = "copy"                               # Better for Docker builds
+upgrade-package = ["pip", "setuptools", "wheel"] # Keep core tools updated
+resolution = "highest"                           # Prefer latest compatible versions
 
 # ===== Optimized Ruff Configuration =====
 [tool.ruff]
@@ -211,8 +207,8 @@ target-version = "py312"
 src = ["src", "tests", "examples"]
 exclude = ["scripts"]
 # Performance optimization
-show-fixes = true  # Show what was fixed
-cache-dir = ".ruff_cache"  # Enable caching
+show-fixes = true         # Show what was fixed
+cache-dir = ".ruff_cache" # Enable caching
 respect-gitignore = true  # Skip ignored files
 
 # Dedicated formatting configuration
@@ -227,55 +223,75 @@ docstring-code-line-length = 72
 [tool.ruff.lint]
 # Comprehensive rule selection for 2025 best practices
 select = [
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # pyflakes
-    "I",   # isort
-    "B",   # flake8-bugbear
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-    "SIM", # flake8-simplify
-    "RUF", # Ruff-specific rules
-    "PL",  # pylint (basic subset)
-    "S",   # flake8-bandit (security)
-    "DTZ", # flake8-datetimez
-    "PTH", # flake8-use-pathlib
-    "PERF",# Perflint (performance)
-    "ASYNC",# flake8-async
-    "ARG", # flake8-unused-arguments
-    "TRY", # tryceratops
+    "E",     # pycodestyle errors
+    "W",     # pycodestyle warnings
+    "F",     # pyflakes
+    "I",     # isort
+    "B",     # flake8-bugbear
+    "C4",    # flake8-comprehensions
+    "UP",    # pyupgrade
+    "SIM",   # flake8-simplify
+    "RUF",   # Ruff-specific rules
+    "PL",    # pylint (basic subset)
+    "S",     # flake8-bandit (security)
+    "DTZ",   # flake8-datetimez
+    "PTH",   # flake8-use-pathlib
+    "PERF",  # Perflint (performance)
+    "ASYNC", # flake8-async
+    "ARG",   # flake8-unused-arguments
+    "TRY",   # tryceratops
 ]
 
 ignore = [
     # Formatter conflicts (universal ignores)
-    "COM812", "COM819",  # Comma rules
-    "D206", "D300",      # Docstring formatting
-    "E111", "E114", "E117",  # Indentation
-    "Q000", "Q001", "Q002", "Q003",  # Quote rules
-    "W191",              # Tab indentation
-    
+    "COM812",
+    "COM819", # Comma rules
+    "D206",
+    "D300",   # Docstring formatting
+    "E111",
+    "E114",
+    "E117",   # Indentation
+    "Q000",
+    "Q001",
+    "Q002",
+    "Q003",   # Quote rules
+    "W191",   # Tab indentation
+
     # Documentation rules (common production ignores)
-    "D100", "D101", "D102", "D103", "D104", "D105",  # Missing docstrings
-    "D200", "D205", "D212", "D400", "D401", "D415",  # Docstring formatting
-    
+    "D100",
+    "D101",
+    "D102",
+    "D103",
+    "D104",
+    "D105", # Missing docstrings
+    "D200",
+    "D205",
+    "D212",
+    "D400",
+    "D401",
+    "D415", # Docstring formatting
+
     # Complexity rules (existing)
     "PLR0911", # Too many return statements
     "PLR0912", # Too many branches
     "PLR0913", # Too many arguments
     "PLR0915", # Too many statements
     "PLR2004", # Magic value used in comparison
-    
+
     # Practical ignores
     "E501",    # Line too long (handled by formatter)
     "S101",    # Use of assert (needed for tests)
     "TRY003",  # Avoid long messages in exceptions
     "PERF203", # try-except in loop (sometimes necessary)
-    "TD002", "TD003", "FIX002",  # TODO formatting
-    "UP006", "UP007",  # Type annotation modernization
+    "TD002",
+    "TD003",
+    "FIX002",  # TODO formatting
+    "UP006",
+    "UP007",   # Type annotation modernization
 ]
 
 # Prevent auto-fixing these rules for safety
-unfixable = ["F401", "F841"]  # Don't auto-remove unused imports/variables
+unfixable = ["F401", "F841"] # Don't auto-remove unused imports/variables
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*" = ["D", "ANN", "S101", "PLR"]
@@ -285,11 +301,14 @@ unfixable = ["F401", "F841"]  # Don't auto-remove unused imports/variables
 combine-as-imports = true
 order-by-type = true
 known-first-party = ["src", "tests"]
-section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
-lines-after-imports = 2  # Standard spacing after imports
-
-# ===== Black Configuration Removed =====
-# Using ruff formatter exclusively to avoid conflicts
+section-order = [
+    "future",
+    "standard-library",
+    "third-party",
+    "first-party",
+    "local-folder",
+]
+lines-after-imports = 2 # Standard spacing after imports
 
 # ===== Pytest Configuration =====
 [tool.pytest.ini_options]
@@ -300,22 +319,22 @@ python_files = ["test_*.py", "*_test.py"]
 python_functions = ["test_*"]
 python_classes = ["Test*", "*Tests", "*Test"]
 # Performance optimizations
-considerfailures = true  # Re-run failed tests first
-tb_native = true  # Use Python's native traceback
+considerfailures = true # Re-run failed tests first
+tb_native = true        # Use Python's native traceback
 
 # Clean output formatting with performance optimizations
 addopts = [
-    "--tb=short",         # Shorter traceback format
-    "--strict-markers",   # Treat unknown markers as errors
-    "--disable-warnings", # Disable pytest warnings for cleaner output
-    "--no-header",        # Remove pytest header
-    "-ra",                # Show short test summary for all except passed
-    "--maxfail=5",        # Stop after 5 failures
-    "--strict-config",    # Error on unknown config keys
-    "--import-mode=importlib",  # Modern import mode
-    "--showlocals",       # Show local variables in tracebacks
-    "--doctest-modules",  # Run doctests in modules
-    "--doctest-continue-on-failure",  # Continue after doctest failures
+    "--tb=short",                    # Shorter traceback format
+    "--strict-markers",              # Treat unknown markers as errors
+    "--disable-warnings",            # Disable pytest warnings for cleaner output
+    "--no-header",                   # Remove pytest header
+    "-ra",                           # Show short test summary for all except passed
+    "--maxfail=5",                   # Stop after 5 failures
+    "--strict-config",               # Error on unknown config keys
+    "--import-mode=importlib",       # Modern import mode
+    "--showlocals",                  # Show local variables in tracebacks
+    "--doctest-modules",             # Run doctests in modules
+    "--doctest-continue-on-failure", # Continue after doctest failures
 ]
 
 # Test discovery
@@ -323,7 +342,7 @@ minversion = "8.0"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
-    "unit: marks tests as unit tests", 
+    "unit: marks tests as unit tests",
     "performance: marks tests as performance tests",
     "asyncio: marks tests as async tests",
     "benchmark: marks tests as benchmark tests",
@@ -388,18 +407,14 @@ filterwarnings = [
 ]
 
 # Parallel execution settings
-addopts_parallel = [
-    "--dist=worksteal",
-    "--tx=auto",
-    "-q",
-]
+addopts_parallel = ["--dist=worksteal", "--tx=auto", "-q"]
 
 # ===== Coverage Configuration =====
 [tool.coverage.run]
 source = ["src"]
 branch = true
-parallel = true  # Enable parallel coverage collection
-context = "${CONTEXT}"  # Add context to coverage data
+parallel = true # Enable parallel coverage collection
+context = "${CONTEXT}" # Add context to coverage data
 concurrency = ["thread", "multiprocessing", "greenlet"]
 omit = [
     "*/tests/*",
@@ -411,15 +426,15 @@ omit = [
     "*/site-packages/*",
     "*/distutils/*",
 ]
-relative_files = true  # Store relative paths for portability
+relative_files = true # Store relative paths for portability
 
 [tool.coverage.report]
 show_missing = true
 skip_covered = false
 fail_under = 38.0
 precision = 2
-sort = "Cover"  # Sort by coverage percentage
-skip_empty = true  # Skip files with no executable code
+sort = "Cover" # Sort by coverage percentage
+skip_empty = true # Skip files with no executable code
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
@@ -461,7 +476,7 @@ dev = [
 python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = false  # Start permissive
+disallow_untyped_defs = false       # Start permissive
 disallow_incomplete_defs = true
 check_untyped_defs = true
 disallow_untyped_decorators = false
@@ -484,25 +499,16 @@ follow_imports_for_stubs = true
 
 # Per-module overrides
 [[tool.mypy.overrides]]
-module = [
-    "tests.*",
-    "docs.*",
-    "scripts.*",
-]
+module = ["tests.*", "docs.*", "scripts.*"]
 ignore_errors = true
 
 [[tool.mypy.overrides]]
-module = [
-    "crawl4ai.*",
-    "firecrawl.*",
-    "qdrant_client.*",
-    "fastembed.*",
-]
+module = ["crawl4ai.*", "firecrawl.*", "qdrant_client.*", "fastembed.*"]
 ignore_missing_imports = true
 
 # ===== Bandit Security Configuration =====
 [tool.bandit]
-skips = ["B101", "B601", "B602"]  # Skip assert_used, shell usage
+skips = ["B101", "B601", "B602"]                                 # Skip assert_used, shell usage
 exclude_dirs = ["/tests/", "/scripts/"]
 tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306"]
 
@@ -599,13 +605,10 @@ benchmark = "python scripts/benchmark_query_api.py"
 [tool.commitizen]
 version = "0.1.0"
 tag_format = "v$version"
-version_files = [
-    "pyproject.toml:version",
-    "src/__init__.py:__version__",
-]
+version_files = ["pyproject.toml:version", "src/__init__.py:__version__"]
 
 # ===== Python bytecode optimization =====
 [tool.py-compile]
-optimize = 2  # -OO level optimization
+optimize = 2                     # -OO level optimization
 source = "src/"
 exclude = ["tests/", "scripts/"]
