--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "python-dotenv>=1.1.0,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
     # Core web scraping
-    "crawl4ai[all]>=0.6.3",
+    "crawl4ai[all]>=0.6.3,<0.8.0",
     "firecrawl-py>=2.7.1",
     # Vector database & embeddings
     "qdrant-client[fastembed]>=1.14.2,<2.0.0",
@@ -53,7 +53,7 @@ dependencies = [
     "FlagEmbedding>=1.3.5,<2.0.0",
     # Data processing & ML (Python 3.13 compatible)
     "pandas>=2.2.3,<3.0.0",
-    "numpy>=1.24.0,<2.0.0",     # Compatible with browser-use and Python 3.12
+    "numpy>=1.26.0,<2.0.0",     # Better Python 3.12 support (1.26.0+)
     "scipy>=1.15.3,<2.0.0",     # Python 3.13 support from 1.13+
     "defusedxml>=0.7.1,<0.8.0", # Secure XML parsing
     # HTTP & async (optimized for performance)
@@ -83,8 +83,8 @@ dependencies = [
     # Utility libraries
     "tomli-w>=1.0.0,<2.0.0",
     "jsonschema2md>=1.5.2,<2.0.0",
-    "opentelemetry-api>=1.34.1",
-    "opentelemetry-sdk>=1.34.1",
+    "opentelemetry-api>=1.34.1,<2.0.0",
+    "opentelemetry-sdk>=1.34.1,<2.0.0",
 ]
 
 [project.optional-dependencies]
@@ -185,7 +185,7 @@ mcp-server = "src.unified_mcp_server:main"
 task-worker = "src.cli_worker:main"
 
 [build-system]
-requires = ["hatchling>=1.18.0", "setuptools>=68.0.0", "wheel>=0.40.0"]
+requires = ["hatchling>=1.25.0", "setuptools>=70.0.0", "wheel>=0.43.0"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -197,8 +197,15 @@ package = true
 # UV performance optimizations
 compile-bytecode = true
 link-mode = "copy"                               # Better for Docker builds
-upgrade-package = ["pip", "setuptools", "wheel"] # Keep core tools updated
+upgrade-package = ["pip", "setuptools", "wheel", "hatchling"] # Keep core tools updated
 resolution = "highest"                           # Prefer latest compatible versions
+python-preference = "managed"                    # Better Python version management
+
+# Python 3.12 compatibility constraints
+constraint-dependencies = [
+    "setuptools>=70.0.0",  # Ensure Python 3.12 compatible setuptools
+    "hatchling>=1.25.0",   # Ensure Python 3.12 compatible hatchling
+]
 
 # ===== Optimized Ruff Configuration =====
 [tool.ruff]
