test: implement comprehensive testing suite with performance optimizations
- Add integration tests for concurrent config operations
- Implement config error scenarios and load stress testing
- Add security config edge cases and comprehensive coverage
- Include property-based testing for config transitions
- Add drift detection concurrency testing
- Implement unit tests for cache LRU behavior and config manager
- Add HTTP mocking patterns and Pydantic settings tests
- Include watchdog integration testing
- Add fast pytest configuration for development
- Rename security test files to simplified naming convention
- Update existing tests with enhanced coverage and patterns

--- a/pytest.ini
+++ b/pytest.ini
@@ -69,9 +69,10 @@ markers =
     benchmark: marks benchmark tests
 
 # Timeout settings with method-specific overrides
-timeout = 120
-timeout_method = thread
-timeout_func_only = true
+# Note: These require pytest-timeout plugin
+# timeout = 120
+# timeout_method = thread
+# timeout_func_only = true
 
 # Parallel execution
 # Note: -n auto will be added by test runner scripts for parallel execution
