--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ dependencies = [
     # Caching & task queue
     "redis[hiredis]>=6.2.0,<7.0.0",
     "arq>=0.25.0,<0.27.0",
+    "cachetools>=5.3.0,<6.0.0", # For LRU cache implementation
     # CLI & user interface
     "click>=8.2.1,<9.0.0",
     "rich>=14.0.0,<15.0.0",
@@ -86,6 +87,7 @@ dependencies = [
     "opentelemetry-api>=1.34.1,<2.0.0",
     "opentelemetry-sdk>=1.34.1,<2.0.0",
     "respx>=0.22.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.optional-dependencies]
