--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,9 @@ dependencies = [
     "colorlog>=6.9.0,<7.0.0",
     "tqdm>=4.67.1,<5.0.0",
     "questionary>=2.1.0,<3.0.0",
+    # Security
+    "pyjwt>=2.10.1,<3.0.0",
+    "passlib[bcrypt]>=1.7.4,<2.0.0",
     # Monitoring & observability
     "prometheus-client>=0.21.1,<0.23.0",
     "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
@@ -88,6 +91,7 @@ dependencies = [
     "opentelemetry-sdk>=1.34.1,<2.0.0",
     "respx>=0.22.0",
     "watchdog>=6.0.0",
+    "circuitbreaker>=2.1.3",
 ]
 
 [project.optional-dependencies]
