fix(tests): resolve import errors and Python 3.11 compatibility issues
- Replace generic type syntax [T] with TypeVar for Python 3.11 compatibility
- Add missing typing imports (Dict, Any, Optional, Union, Callable) to test files
- Export missing config classes (TaskQueueConfig, FusionAlgorithm, CircuitBreakerConfig)
- Export missing enum classes (EmbeddingModel, QueryComplexity, QueryType)
- Install schemathesis dependency for contract testing
- Configure missing pytest markers (post_deployment, reporting, smoke)
- Fix union type syntax issues (X | Y → Optional[X], Union[X, Y])
- Update AdvancedSearchRequest imports to use correct module path
- Replace Python 3.12+ union syntax with typing.Union for broader compatibility

Test collection improved from 1771 to 5364 tests with 10 critical import errors resolved.

Fixes #150

--- a/pytest.ini
+++ b/pytest.ini
@@ -67,6 +67,9 @@ markers =
     hypothesis: marks property-based tests using Hypothesis
     asyncio: marks async tests
     benchmark: marks benchmark tests
+    post_deployment: marks tests for post-deployment validation
+    reporting: marks tests related to reporting functionality
+    smoke: marks smoke tests for basic functionality validation
 
 # Timeout settings with method-specific overrides
 # Note: These require pytest-timeout plugin
