--- a/pyproject.toml
+++ b/pyproject.toml
@@ -480,6 +480,9 @@ directory = "htmlcov"
 output = "coverage.xml"
 
 [dependency-groups]
+contract = [
+    "schemathesis>=4.0.2",
+]
 dev = [
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
