chore: update project dependencies and create config backup
- Update pyproject.toml with latest dependencies for agentic features
- Lock dependencies in uv.lock for reproducible builds
- Create backup of legacy configuration files before consolidation
- Ensure proper dependency management for FastMCP 2.0+ and Pydantic-AI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -558,6 +558,10 @@ markers = [
     "spike: mark test as spike test",
     "endurance: mark test as endurance test",
     "volume: mark test as volume test",
+    
+    # Deployment and reporting markers
+    "post_deployment: mark test as post-deployment test",
+    "reporting: mark test as reporting test",
 ]
 
 # Logging configuration for tests
@@ -623,6 +627,9 @@ directory = "htmlcov"
 output = "coverage.xml"
 
 [dependency-groups]
+contract = [
+    "schemathesis>=3.39.16",
+]
 dev = [
     "pytest>=8.3.5",
     "pytest-asyncio>=1.0.0",
