feat(config): consolidate configuration tests and enhance validation framework
- Add comprehensive configuration validation with async support
- Implement configuration drift detection and error handling
- Enhance security configuration with improved middleware integration
- Add missing cache types and vector search model configurations
- Consolidate configuration manager with robust error scenarios
- Update cost estimation tools with enhanced configuration options
- Add configuration validation report and testing documentation
- Improve integration tests with better service interaction coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -401,6 +401,7 @@ unfixable = [
     "S101",    # Allow assert statements
     "PLR",     # Skip complexity rules
     "UP035",   # Allow deprecated typing for compatibility
+    "N999",    # Allow invalid module names (e.g., build-config)
 ]
 
 # Configuration modules - allow global patterns
@@ -659,6 +660,7 @@ dev = [
     "coverage>=7.6.0",
     "ruff>=0.12.0",
     "pytest-benchmark>=5.1.0",
+    "testcontainers>=4.8.1",
     "hypothesis>=6.135.0,<7.0.0",
     "pytest-xdist>=3.7.0",
     "mutmut>=2.5.1",
