--- a/docs/build-config/mkdocs.yml
+++ b/docs/build-config/mkdocs.yml
@@ -40,26 +40,26 @@ theme:
 nav:
   - Home: index.md
   - Users:
-    - Overview: users/README.md
-    - Quick Start: users/quick-start.md
-    - Configuration: users/configuration-management.md
-    - Examples: users/examples-and-recipes.md
-    - Troubleshooting: users/troubleshooting.md
+      - Overview: users/README.md
+      - Quick Start: users/quick-start.md
+      - Configuration: users/configuration-management.md
+      - Examples: users/examples-and-recipes.md
+      - Troubleshooting: users/troubleshooting.md
   - Developers:
-    - Overview: developers/README.md
-    - Getting Started: developers/getting-started.md
-    - Architecture: developers/architecture.md
-    - API Reference: developers/api-reference.md
-    - Integration Guide: developers/integration-guide.md
-    - Contributing: developers/contributing.md
+      - Overview: developers/README.md
+      - Getting Started: developers/getting-started.md
+      - Architecture: developers/architecture.md
+      - API Reference: developers/api-reference.md
+      - Integration Guide: developers/integration-guide.md
+      - Contributing: developers/contributing.md
   - Operators:
-    - Overview: operators/README.md
-    - Deployment: operators/deployment.md
-    - Configuration: operators/configuration.md
-    - Monitoring: operators/monitoring.md
-    - Security: operators/security.md
-    - Operations: operators/operations.md
-    - Windows Compatibility: operators/windows-compatibility.md
+      - Overview: operators/README.md
+      - Deployment: operators/deployment.md
+      - Configuration: operators/configuration.md
+      - Monitoring: operators/monitoring.md
+      - Security: operators/security.md
+      - Operations: operators/operations.md
+      - Windows Compatibility: operators/windows-compatibility.md
 
 markdown_extensions:
   - toc:
@@ -70,7 +70,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+          format: "!!python/name:pymdownx.superfences.fence_code_format"
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.highlight:
